--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "DLCup 2021",
+  "name": "Department League Cup 2021",
   "icons": [
     {
-      "src": "dlicon.ico",
+      "src": "icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "Logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "Logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
